--- a/mindkeeper/users/templates/users/invalid_token.html
+++ b/mindkeeper/users/templates/users/invalid_token.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+  <div>токен не кореттен</div>
+  <a href="{% url 'society:login' %}">залогиньтесь снова что бы получить новый токен</a>
 </body>
 </html>
