--- a/mindkeeper/users/templates/users/required_verify_email.html
+++ b/mindkeeper/users/templates/users/required_verify_email.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Подтвердите почту</title>
 </head>
 <body>
-$END$
+  <div>Проверьте почту</div>
 </body>
 </html>
